<resources>
    <string name="app_name">MVVM Kotlin</string>
    <string name="email_or_username">Email</string>
    <string name="signin">Login</string>
    <string name="password">Password</string>
    <string name="forgot_pin">Forgot Password</string>
    <string name="Dont_have_an_account">Don\'t have an accout? \n SignUp</string>
    <string name="signup">SignUp</string>
    <string name="already_have_an_account">Already have an account? SignIn</string>
    <string name="email">Email</string>
    <string name="user_name">UserName</string>
    <string name="full_name">Full Name</string>
    <string name="profile">Brian Onchari</string>
    <string name="brian_onchari">Brian Onchari</string>
    <string name="home">Home</string>
    <string name="quotes">Quotes</string>
</resources>
